# rotating-file-server

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml
.github/workflows/: python.yml
rotate_files/: __main__.py  server.py
tests/: test_server.py
